--- a/interactive_engine/assembly/src/conf/groot/log4rs.yml
+++ b/interactive_engine/assembly/src/conf/groot/log4rs.yml
@@ -3,13 +3,13 @@ appenders:
   stdout:
     kind: console
     encoder:
-      pattern: "{d(%Y-%m-%d %H:%M:%S.%f)} {h({l:<5})} (({f}:{L})) [{T}][{X(trace)}] {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S.%f)} {h({l:<5})} (({f}:{L})) [{T}] {m}{n} {X(trace)}"
   file:
     kind: rolling_file
     append: true
     path: "$ENV{LOG_DIR}/store-executor.log"
     encoder:
-      pattern: "{d(%Y-%m-%d %H:%M:%S.%f)} {h({l:<5})} (({f}:{L})) [{T}][{X(trace)}] {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S.%f)} {h({l:<5})} (({f}:{L})) [{T}] {m}{n} {X(trace)}"
     policy:
       trigger:
         kind: size
