--- a/charts/graphscope-store/templates/configmap.yaml
+++ b/charts/graphscope-store/templates/configmap.yaml
@@ -171,14 +171,14 @@ data:
 
     while true
     do
-      if [ -z ${POD_ACCESSIBLE} ]; then
-        export HOST=$(kubectl -n ${NAMESPACE} get pod ${INSTANCE_NAME}-graphscope-store-frontend-0 -o jsonpath="{.status.hostIP}")
-        export GRPC_PORT=$(kubectl -n ${NAMESPACE} get services -o jsonpath="{.spec.ports[0].nodePort}" ${INSTANCE_NAME}-graphscope-store-frontend)
-        export GREMLIN_PORT=$(kubectl -n ${NAMESPACE} get services -o jsonpath="{.spec.ports[1].nodePort}" ${INSTANCE_NAME}-graphscope-store-frontend)
-      else
+      if [ "${POD_NETWORK_PLUGIN_TYPE}" == "terway" ]; then
         export HOST="${INSTANCE_NAME}-graphscope-store-frontend-0.${INSTANCE_NAME}-graphscope-store-frontend-headless"
         export GRPC_PORT=${GROOT_GRPC_PORT}
         export GREMLIN_PORT=${GROOT_GREMLIN_PORT}
+      else
+        export HOST=$(kubectl -n ${NAMESPACE} get pod ${INSTANCE_NAME}-graphscope-store-frontend-0 -o jsonpath="{.status.hostIP}")
+        export GRPC_PORT=$(kubectl -n ${NAMESPACE} get services -o jsonpath="{.spec.ports[0].nodePort}" ${INSTANCE_NAME}-graphscope-store-frontend)
+        export GREMLIN_PORT=$(kubectl -n ${NAMESPACE} get services -o jsonpath="{.spec.ports[1].nodePort}" ${INSTANCE_NAME}-graphscope-store-frontend)
       fi
       echo "${HOST} ${GRPC_PORT} ${GREMLIN_PORT}"
       python3 -c 'import base64;import os;from gremlin_python.driver.client import Client;ip=os.getenv("HOST");gremlin_port=os.getenv("GREMLIN_PORT");graph_url=f"ws://{ip}:{gremlin_port}/gremlin";username=os.getenv("GROOT_USERNAME");password=base64.b64decode(os.getenv("GROOT_PASSWORD")).decode("utf-8");client = Client(graph_url, "g", username=username, password=password); ret = client.submit("g.V().limit(1)").all().result(); client.close();' && break
