--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,6 +1,11 @@
-# Provide the configuration for the compared systems, starting from system.1 to system.n. Currently, the supported systems includes GIE and KuzuDb.
-# For each system, either endpoint or dbpath is needed for a compared system, depending on the access method of it.
-# e.g., GIE that supports cypher/gremlin clients, and it is accessed by the endpoint; while for KuzuDb, it is accessed by the dbpath.
+# The configuration for the compared systems.
+# Currently, the supported systems includes GIE and KuzuDb.
+# For each system, starting from system.1 to system.n, the following configurations are needed:
+# name: the name of the system, e.g., GIE, KuzuDb.
+# client: the client of the system, e.g., for GIE, it can be cypher, gremlin; for KuzuDB, it should be kuzu.
+# endpoint(optional): the endpoint of the system if the sytem provides a service endpoint, e.g., for GIE gremlin, it is 127.0.0.1:8182 by default.
+# dbpath(optional): the path of the database of the system if the system is a local database and need to access the database by the path, e.g., for KuzuDb, it can be /path_to_db/example_db.
+# Either of endpoint or dbpath need to be provided, depending on the access method of the system.
 system.1.name = GIE
 system.1.client = cypher
 system.1.endpoint = 127.0.0.1:7687
@@ -9,30 +14,36 @@ system.2.name = KuzuDb
 system.2.client = kuzu
 system.2.endpoint = 
 system.2.dbpath = ./job_db
+# common configurations for the benchmarking systems
+system.username = 
+system.password =
 
-# Provide the configuration for the benchmarking queries.
+# The configuration for running the benchmarking queries.
+# the number of threads sending queries
+benchmark.thread.count=1
+# the number of warmup queries each kind of query
+benchmark.warmup.every.query=0
+# the number of queries sending by each thread
+benchmark.operation.count.every.query=1
+# the timeout setting for each query (in milliseconds)
+benchmark.timeout=60000
+# enable print info
+benchmark.print.query.name=true
+benchmark.print.query.result=true
+
+# The configuration for the benchmarking queries.
+# the directory of query templates
+query.dir = ./queries/cypher_queries/job
+# the directory of query parameters
+query.parameters.dir = ./data/substitution_parameters/
 # query suffix. By default, if the client is gremlin, the query suffix is .gremlin, and if the client opt is cypher, the query suffix is cypher.
 query.suffix=cypher
-# the number of threads sending queries
-thread_count=1
-# the number of warmup queries each kind of query
-warmup.every.query=0
-# the number of queries sending by each thread
-operation.count.every.query=1
-# the directory of query templates
-queryDir=./queries/cypher_queries/job_kuzu
-# the director of query parameters
-interactive.parameters.dir=./data/substitution_parameters/
 # the directory of query results
-expected_results.path=./data/expected_results/expected.json
+query.expected.path = ./data/expected_results/expected.json
+# specify which kind of queries are sent, if query.all.enable is true, the following settings to specify specific queries are ignored.
+query.all.enable=true
 
-# enable print info
-printQueryNames=true
-printQueryStrings=true
-printQueryResults=false
-
-# specify which kind of queries are sent, if all_queries.enable is true, the following settings are ignored
-all_queries.enable=true
+# the following configurations are used to specify which kind of queries are sent:
 # ldbc interactive complex read queries
 ldbc_query_1.enable=false
 ldbc_query_2.enable=false
