--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = learning_engine/graphlearn-for-pytorch
 	url = https://github.com/alibaba/graphlearn-for-pytorch.git
 
+[submodule "flex/third_party/parallel-hashmap"]
+	path = flex/third_party/parallel-hashmap
+	url = https://github.com/greg7mdp/parallel-hashmap.git
