--- a/interactive_engine/groot-http/pom.xml
+++ b/interactive_engine/groot-http/pom.xml
@@ -73,6 +73,10 @@
             <groupId>com.alibaba.graphscope</groupId>
             <artifactId>groot-client</artifactId>
         </dependency>
+            <dependency>
+            <groupId>com.alibaba.graphscope</groupId>
+            <artifactId>interactive-common</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
